--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="./img/logo.png">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <title>Starbucks Landing Page - Dark Mode</title>
 </head>
 <body>
-    
+    <section>
+        <header>
+            <a href="#"><img src="./img/logo.png" class="logo"></a>
+            <ul class="navigation">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Menu</a></li>
+                <li><a href="#">What's New</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </header>
+    </section>
 
 
     <script src="./app.js"></script>
