Added Content & textBox

--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
                 <li><a href="#">Contact</a></li>
             </ul>
         </header>
+
+        <div class="content">
+            <div class="textBox">
+                <h2>It's not just Coffee<br>It's <span>Starbucks</span></h2>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dolores distinctio consequuntur debitis quas. Dolor natus blanditiis quo. Tempora, est! Similique blanditiis nesciunt officiis aperiam architecto. Voluptatum velit voluptatibus dolor doloremque. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Numquam reprehenderit ex recusandae dolorem laborum est facilis a at.</p>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="imgBox">
+                <img src="./img/img.png" alt="image">
+            </div>
+        </div>
     </section>
 
 
