--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
                 <li><a href="#">Menu</a></li>
                 <li><a href="#">What's New</a></li>
                 <li><a href="#">Contact</a></li>
+                <li><span class="themeSwitch"></span></li>
             </ul>
         </header>
 
