--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section>
         <header>
             <a href="#"><img src="./img/logo.png" class="logo"></a>
+            <div class="toggle"></div>
             <ul class="navigation">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Menu</a></li>
